2009-10-13  vadim  <vadim@vk.crocodile.org>

	* debugDialog.cpp (debugDialog::debugDialog),
	DiscoveryDruid.cpp (DiscoveryDruid::DiscoveryDruid) Reversing the
	change made in 3.0.7 in the debug and discovery druid windows, the
	change was intended to make the window title bar show "close"
	button on Mac OS X. Unfortunately the caused the title bar to
	disappear all together on Linux under some window managers. Modal
	QT dialogs do not have title bar buttons on Mac OS X, but since
	they always have "OK", "Finish", "Close" or "Cancel" buttons as
	part of the dialog contents, absense of the "close" button in the
	title bar is not critical.

	* VERSION (VERSION): started v3.0.8

2009-09-18  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler.cpp (ItfNegation::processNext): (change in
	libfwbuilder) fix for bug #2710034 "PF Compiler in 3.0.3
	Unprotected Interface Bug". When we expand "interface" rule
	element which uses negation, skip unprotected interfaces.

2009-09-16  vadim  <vadim@vk.crocodile.org>

 	* RoutingCompiler_ipt_writers.cpp (PrintRule::processNext): Fixed
	security issue with temporary file handling in the generated
	iptables script. The problem only affects Linux systems where
	Firewall Builder is used to generate static routing
	configuration. The problem exists in Firewall Builder versions
	3.0.4, 3.0.5, 3.0.6

2009-09-05  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_iosacl_writers.cpp (PrintRule::_printDstService):
	fixed bug (no #): policy compiler for Cisco IOS ACL did not add
	icmp type to the generated ipv6 access-list statements for rules
	that matched ICMPv6 services.

2009-08-30  vadim  <vadim@vk.crocodile.org>

	* instDialog_ui_ops.cpp (instDialog::addToLog): fixed bug #2847263
	"Batch compiling incrementally slow". The time it took to add a
	log line to the progress window in the "Compile" dialog slowed
	down a lot as amount of text in QTextEditor increased.

2009-08-27  vadim  <vadim@vk.crocodile.org>
