@@ -595,14 +595,20 @@ bool FWWindow::editingLibrary()
 
 void FWWindow::toolsDiscoveryDruid()
 {
-    DiscoveryDruid druid(this);
-    druid.exec();
+    if (activeProject()) 
+    {
+        DiscoveryDruid druid(this);
+        druid.exec();
+    }
 }
 
 void FWWindow::importPolicy()
 {
-    DiscoveryDruid druid(this, true);
-    druid.exec();
+    if (activeProject()) 
+    {
+        DiscoveryDruid druid(this, true);
+        druid.exec();
+    }
 }
 
 void FWWindow::load(QWidget*)
